# action-aperture

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/aperture/: __init__.py  core.py  tui.py
src/aperture/parsers/: __init__.py  base.py  pytest.py
src/aperture/ui/: __init__.py  screens.py  widgets.py
tests/: __init__.py  test_parsers.py
