[project]
name = "action-aperture"
version = "0.1.0"
description = "Terminal UI for inspecting GitHub Actions logs"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["github-actions", "tui", "logs", "pytest", "ci", "testing"]
dependencies = [
    "textual>=0.70.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
actap = "aperture.tui:main"

[project.urls]
Homepage = "https://github.com/williambdean/action-aperture"
Repository = "https://github.com/williambdean/action-aperture"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aperture"]
